# VirtualMachine

./: CMakeLists.txt  README.md  VMTranslator.cpp  assembly_writer.cpp  assembly_writer.h  parser.cpp  parser.h  utils.cpp  utils.h  virtualmachine.cpp  vm_commands.h
test/UnitTests/: CMakeLists.txt  UnitTests.cpp
